<?xml version="1.0" encoding="utf-8"?>
<resources>

    <integer name="apkVersionCode">16</integer>
    <string name="apkVersionName">3.1</string>
    <string name="packageName">txl.activity</string>
    <string name="app_name">单位通信录</string>
    <string name="hello_world">Hello world!</string>
    
	<string name="prompt_message_type">选择消息类别</string>
	<string name="prompt_commdir_type">选择通讯录类别</string>
	
	<string name="setting_login_label">登陆</string>
	<string name="setting_modify_password_label">修改密码</string>
	<string name="setting_dial_mode">拨打方式</string>
	<string name="setting_sync_commdir">同步号码</string> 
	<string name="setting_about_us">关于我们</string> 
	<string name="setting_check_upgrade">检查更新</string> 
	<string name="setting_advise">意见反馈</string>
	<string name="setting_share">告诉朋友</string> 
	<string name="setting_use_help">如何使用</string> 
	
	
	
	<string name="setting_offline_storage">离线存储</string> 
	<string name="setting_sync_company">同步公司通讯录</string>   
	<string name="setting_sync_share">同步共享通讯录</string>
	<string name="setting_sync_personal">同步个人通讯录</string>
	<string name="setting_sync_personal_backup">备份个人通讯录</string>
	<string name="setting_sync_personal_restore">恢复个人通讯录</string>
	<string name="setting_sync_complete">完全同步</string>
	
	<string name="setting_incoming">来电设置</string>
	<string name="setting_incoming_filter">号码过滤</string>
	<string name="setting_other">其他设置</string>
	<string name="setting_online_pushmessage">在线推送</string>
	<string name="setting_online_push">在线推送</string>
	<string name="setting_message_send">消息发送</string>
	<string name="setting_download_set">下载设置</string>
	<string name="setting_wifi_tip">wifi网络提示</string>
	<string name="setting_ad_set">广告设置</string>
	<string name="setting_ad_receive">广告接收</string>
	<string name="prompt_setting_message_send_mode">选择消息发送方式</string>
	<string name="prompt_setting_dial_mode">选择消息发送方式</string>
	
	
	<string name="menu_setting">设置</string>
	<string name="menu_quit">退出</string>
	<string name="menu_sms_all">所有</string>
	<string name="menu_sms_unread">未读</string>
	<string name="menu_sms_draft">草稿</string>
	
	<string name="contact_search_hint_text">共有 %d 个联系人</string>
	<string name="setting_about_us_url">www/aboutus.html</string>
	<string name="setting_use_help_url">www/help.html</string>
	
	<string-array name="setting_message_send_mode_array">
	   <item>短信发送</item> 
	   <item>消息推送</item> 
	</string-array>
	
	<string-array name="setting_dial_mode_array">
	    <item>直接拨打</item>
	    <item>可选拨打</item>
	</string-array>
	<string-array name="contact_commdir_type">
	    <item>个人通讯录</item>
	    <item>公司通讯录</item>
	    <item>共享通讯录</item>
	</string-array>
	
	
	
	<string name="wx_app_id">wxf8781bc911b7e3ff</string>
	
</resources>