<?xml version="1.0" encoding="utf-8"?> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/setting_layout"
    android:background="@color/activity_background_color"
    >
    <include layout="@layout/header" />

    <ScrollView
        android:id="@+id/setting_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        >

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <!-- 登陆   -->
            <TableRow
                android:id="@+id/setting_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                >
                <ImageView style="@style/setting_column1"   android:src="@drawable/setting_login" android:layout_height="wrap_content" android:layout_width="wrap_content" />
                
                <TextView
                    style="@style/setting_column2"
                    android:id="@+id/setting_login_label"
                    android:text="@string/setting_login_label" />
                <ImageView style="@style/setting_column3"  android:src="@drawable/setting_more" android:layout_height="wrap_content" android:layout_width="wrap_content" />
            </TableRow>

            
            
            <!-- 修改密码 -->
            <TableRow
                android:id="@+id/setting_modify_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:gravity="center_vertical"
                >
                
                <ImageView style="@style/setting_column1"   android:src="@drawable/setting_modify" android:layout_height="wrap_content" android:layout_width="wrap_content" />
                
                <TextView
                    style="@style/setting_column2"
                    android:text="@string/setting_modify_password_label" />
                <ImageView style="@style/setting_column3"  android:src="@drawable/setting_more" android:layout_height="wrap_content" android:layout_width="wrap_content" />
            </TableRow>
			
            <!--  wifi网络提示 -->
            <TableRow
                android:id="@+id/setting_wifi_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:gravity="center_vertical"
                >
                <ImageView style="@style/setting_column1"   android:src="@drawable/setting_tip" android:layout_height="wrap_content" android:layout_width="wrap_content" />
                
                <TextView
                    style="@style/setting_column2"
                    android:text="@string/setting_wifi_tip" />

				<LinearLayout style="@style/setting_column3" android:layout_marginRight="15dp">
					<ToggleButton
					   android:id="@+id/setting_wifi_tip_btn"
					   android:layout_width="wrap_content"
					   android:layout_height="wrap_content"
					   android:background="@drawable/switch_bg"
					   android:textOn=""
                		android:textOff="" />
				</LinearLayout>
               
                
            </TableRow>
            
           	<!-- 广告接收设置 -->
            <TableRow
                android:id="@+id/setting_ad_receive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:gravity="center_vertical"
                >
                <ImageView style="@style/setting_column1"   android:src="@drawable/setting_tip" android:layout_height="wrap_content" android:layout_width="wrap_content" />
                
                <TextView
                    style="@style/setting_column2"
                    android:text="@string/setting_ad_receive" />
                
                <LinearLayout style="@style/setting_column3" android:layout_marginRight="15dp">
					<ToggleButton
					   android:id="@+id/setting_ad_receive_btn"
					   android:layout_width="wrap_content"
					   android:layout_height="wrap_content"
					   android:background="@drawable/switch_bg"
					   android:textOn=""
                		android:textOff=""/>
				</LinearLayout>
            </TableRow>
            
            
            <TableRow
                android:id="@+id/setting_online_push"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:gravity="center_vertical"
                >
                <ImageView style="@style/setting_column1"   android:src="@drawable/setting_message" android:layout_height="wrap_content" android:layout_width="wrap_content" />
                
                <TextView
                    style="@style/setting_column2"
                    android:text="@string/setting_online_push" />
                <LinearLayout style="@style/setting_column3" android:layout_marginRight="15dp">
					<ToggleButton
					   android:id="@+id/setting_online_push_btn"
					   android:layout_width="wrap_content"
					   android:layout_height="wrap_content"
					   android:background="@drawable/switch_bg"
					   android:textOn=""
                		android:textOff="" />
				</LinearLayout>	
            </TableRow>
            
            
            
            <!-- 消息发送设置 -->
            <!-- <TableRow
                android:id="@+id/setting_message_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:gravity="center_vertical"
                >
                <ImageView style="@style/setting_column1"   android:src="@drawable/setting_message" android:layout_height="wrap_content" android:layout_width="wrap_content" />
                
                <TextView
                    style="@style/setting_column2"
                    android:text="@string/setting_message_send" />
                <LinearLayout style="@style/setting_column3" android:layout_marginRight="15dp">
                	<Spinner
                        android:id="@+id/setting_message_send_mode_spinner"
                        style="@style/Txl.Skin.Widget.Spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawSelectorOnTop="true"
                        android:layout_alignParentRight="true"
                        android:prompt="@string/prompt_setting_message_send_mode" />
                </LinearLayout>
                
            </TableRow> -->
            
            <!-- 同步号码 -->
            <TableRow
                android:id="@+id/setting_sync_commdir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:gravity="center_vertical"
                >
                <ImageView style="@style/setting_column1"   android:src="@drawable/setting_sync_commdir" android:layout_height="wrap_content" android:layout_width="wrap_content" />
                
                <TextView
                    style="@style/setting_column2"
                    android:text="@string/setting_sync_commdir" />
                <ImageView style="@style/setting_column3"  android:src="@drawable/setting_more" android:layout_height="wrap_content" android:layout_width="wrap_content" />
                
            </TableRow>
            
            
            <!-- 来电过滤 -->
            <!-- <TableRow
                android:id="@+id/setting_incoming_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:gravity="center_vertical"
                >
                <ImageView style="@style/setting_column1"   android:src="@drawable/setting_incoming_filter" android:layout_height="wrap_content" android:layout_width="wrap_content" />
                
                <TextView
                    style="@style/setting_column2"
                    android:text="@string/setting_incoming_filter" />
                <ImageView style="@style/setting_column3"  android:src="@drawable/setting_more" android:layout_height="wrap_content" android:layout_width="wrap_content" />
                
            </TableRow> -->
            
            <!-- 拨号设置 -->
            <TableRow
                android:id="@+id/setting_dial_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:gravity="center_vertical"
                >
                <ImageView style="@style/setting_column1"   android:src="@drawable/setting_dial_setting" android:layout_height="wrap_content" android:layout_width="wrap_content" />
                
                <TextView
                    style="@style/setting_column2"
                    android:text="@string/setting_dial_mode" />
                <LinearLayout style="@style/setting_column3" android:layout_weight="3" android:layout_marginRight="15dp">
                	<Spinner
                        android:id="@+id/setting_dial_mode_btn"
                        style="@style/Txl.Skin.Widget.Spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawSelectorOnTop="true"
                        android:prompt="@string/prompt_setting_dial_mode" />
                </LinearLayout>
            </TableRow>
            
            
            </TableLayout>
            
        
        
    </ScrollView>

</LinearLayout>
 